[gd_scene load_steps=12 format=3 uid="uid://b5ous68upikb0"]

[ext_resource type="Script" path="res://character/npc/npc_manager.gd" id="1_dvitw"]
[ext_resource type="PackedScene" uid="uid://dlfot17owh0rt" path="res://character/character.tscn" id="1_plabe"]
[ext_resource type="Shader" path="res://scripts/shaders/outline.gdshader" id="2_kslaq"]
[ext_resource type="PackedScene" uid="uid://bcwkugn6v3oy7" path="res://addons/godot_state_charts/utilities/state_chart_debugger.tscn" id="4_xoi6n"]
[ext_resource type="Script" path="res://addons/godot_state_charts/state_chart.gd" id="4_yurom"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="5_uweqq"]
[ext_resource type="Script" path="res://addons/godot_state_charts/parallel_state.gd" id="6_14h83"]
[ext_resource type="Script" path="res://addons/godot_state_charts/atomic_state.gd" id="6_qkv1j"]
[ext_resource type="Script" path="res://addons/godot_state_charts/transition.gd" id="7_oonwq"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1ms1k"]
resource_local_to_scene = true
shader = ExtResource("2_kslaq")
shader_parameter/outline_color = null
shader_parameter/is_outlined = false
shader_parameter/is_hit = false

[sub_resource type="CircleShape2D" id="CircleShape2D_88c66"]
radius = 75.0

[node name="NPC" type="Node2D"]
script = ExtResource("1_dvitw")

[node name="behavior_state_chart" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("4_yurom")

[node name="root" type="Node" parent="behavior_state_chart"]
script = ExtResource("6_14h83")

[node name="non_hostile_states" type="Node" parent="behavior_state_chart/root"]
script = ExtResource("5_uweqq")
initial_state = NodePath("idle_state")

[node name="idle_state" type="Node" parent="behavior_state_chart/root/non_hostile_states"]
script = ExtResource("6_qkv1j")

[node name="to_alert" type="Node" parent="behavior_state_chart/root/non_hostile_states/idle_state"]
script = ExtResource("7_oonwq")
to = NodePath("../../alert_state")
event = &"enemy_entered"
delay_in_seconds = "0.0"

[node name="alert_state" type="Node" parent="behavior_state_chart/root/non_hostile_states"]
script = ExtResource("6_qkv1j")

[node name="to_idle" type="Node" parent="behavior_state_chart/root/non_hostile_states/alert_state"]
script = ExtResource("7_oonwq")
to = NodePath("../../idle_state")
event = &"enemy_exited"
delay_in_seconds = "1.0"

[node name="hostile_states" type="Node" parent="behavior_state_chart/root"]
script = ExtResource("5_uweqq")
initial_state = NodePath("normal")

[node name="normal" type="Node" parent="behavior_state_chart/root/hostile_states"]
script = ExtResource("6_qkv1j")

[node name="to_attacking" type="Node" parent="behavior_state_chart/root/hostile_states/normal"]
script = ExtResource("7_oonwq")
to = NodePath("../../attacking")
event = &"threat_detected"
delay_in_seconds = "0.0"

[node name="attacking" type="Node" parent="behavior_state_chart/root/hostile_states"]
script = ExtResource("6_qkv1j")

[node name="to_normal" type="Node" parent="behavior_state_chart/root/hostile_states/attacking"]
script = ExtResource("7_oonwq")
to = NodePath("../../normal")
event = &"threat_over"
delay_in_seconds = ""

[node name="character" parent="." instance=ExtResource("1_plabe")]
material = SubResource("ShaderMaterial_1ms1k")

[node name="StateChartDebugger2" parent="character" instance=ExtResource("4_xoi6n")]
z_index = 10
offset_left = -159.0
offset_top = -90.0
offset_right = 213.0
offset_bottom = 630.0
scale = Vector2(0.25, 0.25)
initial_node_to_watch = NodePath("../../behavior_state_chart")

[node name="Label3" type="Label" parent="character"]
unique_name_in_owner = true
offset_right = 40.0
offset_bottom = 23.0

[node name="detection_area" type="Area2D" parent="character"]
unique_name_in_owner = true
position = Vector2(0, -12)
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="character/detection_area"]
shape = SubResource("CircleShape2D_88c66")

[connection signal="state_entered" from="behavior_state_chart/root/non_hostile_states/idle_state" to="." method="_on_idle_state_state_entered"]
[connection signal="state_exited" from="behavior_state_chart/root/non_hostile_states/alert_state" to="." method="_on_alert_state_state_exited"]
[connection signal="state_physics_processing" from="behavior_state_chart/root/non_hostile_states/alert_state" to="." method="_on_alert_state_state_physics_processing"]
[connection signal="state_processing" from="behavior_state_chart/root/hostile_states/attacking" to="." method="_on_attacking_state_processing"]
[connection signal="area_entered" from="character/detection_area" to="." method="_on_detection_area_area_entered"]
[connection signal="area_exited" from="character/detection_area" to="." method="_on_detection_area_area_exited"]
